# hacks

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
ascii_cam/: __init__.py  audio.py  browser.py  camera.py  cli.py  converter.py  display.py  effects.py  llm.py  player.py  recorder.py
